--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "5.3.0",
+  "version": "5.4.0",
   "name": "cordova-plugin-googleplus",
   "cordova_name": "Google SignIn",
   "description": "Use your Google account to authenticate with the app.",
@@ -23,7 +23,8 @@
   ],
   "platforms": [
     "android",
-    "ios"
+    "ios",
+    "windows"
   ],
   "engines": [
     {
